--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -46,8 +46,19 @@
 									<a title='创建于 $article.sPostTime' target='_blank'
 										href='${virtualPath}archive/${article._id}.html'>${article.Title}</a></td>
 								<td>
-									<a href='javascript:;'>编辑</a>
-									<span class='caret'></span></td>
+									<div class='dropdown'>
+										<a id='drop${article._id}' href='javascript:;'
+											class='dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
+											操作 <span class='caret'></span>
+										</a>
+										<ul class='dropdown-menu' role='menu' aria-labelledby='drop${article._id}'>
+											<li role='presentation'>
+												<a role='menuitem' tabindex='-1' href='javascript:alert("${article._id}")'>编辑</a></li>
+											<li role='presentation'>
+												<a role='menuitem' tabindex='-1' href='javascript:alert("${article._id}")'>删除</a></li>
+										</ul>
+									</div>
+								</td>
 							</tr>#end
 						</tbody>
 					</table>
