--- a/blog/views/user/admin/Sidebar.html
+++ b/blog/views/user/admin/Sidebar.html
@@ -58,7 +58,7 @@
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
-				<li class='list-group-item'>
+				<li class='list-group-item active'>
 					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
 						<div>发表博文</div></a>
 				</li>
