--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -57,7 +57,7 @@
 											class='dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
 											操作 <span class='caret'></span>
 										</a>
-										<ul class='dropdown-menu' role='menu' aria-labelledby='drop${article._id}'>
+										<ul class='dropdown-menu pull-right dropdown-menu-right' role='menu' aria-labelledby='drop${article._id}'>
 											<li role='presentation'>
 												<a role='menuitem' tabindex='-1' href='javascript:alert("${article._id}")'>
 													<span class='glyphicon glyphicon-edit'></span> 编辑</a></li>
