--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -1,4 +1,10 @@
 <div class='col-sm-12 col-md-3'>
+	<div class='panel panel-default'>
+		<div class='panel-body'>
+			<span class='glyphicon glyphicon-bullhorn'></span>
+			这个人很懒，啥也没写
+		</div>
+	</div>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
 			<h3 class='panel-title'>关注</h3>
