--- a/blog/views/pagelet/Top10Comments.vm.html
+++ b/blog/views/pagelet/Top10Comments.vm.html
@@ -1,6 +1,6 @@
 <div class='panel panel-default olx-panel'>
 	<div class='panel-heading'>
-		<h3 class='panel-title'>最新评论</h3>
+		<h3 class='panel-title glyphicon glyphicon-comment'>&#8201;最新评论</h3>
 	</div>
 	<div class='panel-body'>
 		<div class='list-group'>
