--- a/blog/views/pagelet/Top10ViewNums.vm.html
+++ b/blog/views/pagelet/Top10ViewNums.vm.html
@@ -1,6 +1,6 @@
 <div class='panel panel-default olx-panel'>
 	<div class='panel-heading'>
-		<h3 class='panel-title'>热门文章</h3>
+		<h3 class='panel-title glyphicon glyphicon-fire'>&#8201;热门文章</h3>
 	</div>
 	<div class='panel-body'>
 		<ul class='list-group'>
