--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -1,8 +1,40 @@
 <div class='col-sm-12 col-md-3'>
 	<div class='panel panel-default'>
 		<div class='panel-body'>
+			<div class='owner'>
+				<div>
+					<div class='face'>
+						<a href='javascript:;'>
+							<img src='${virtualPath}public/assets/images/face/48x48/08_avatar_small.jpg?0'></a>
+					</div>
+				</div>
+				<div>
+					<div class='user_name'>我哪知道</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class='panel panel-default'>
+		<div class='panel-body'>
 			<span class='glyphicon glyphicon-bullhorn'></span>
 			这个人很懒，啥也没写
+		</div>
+	</div>
+	<div class='panel panel-default olx-panel'>
+		<div class='panel-heading'>
+			<h3 class='panel-title'>常用操作</h3>
+		</div>
+		<div class='panel-body'>
+			<ul class='list-group'>
+				<li class='list-group-item'>
+					<a href='javascript:;'>
+						<div>发表博文»</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='javascript:;'>
+						<div>空间管理</div></a>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class='panel panel-default olx-panel'>
