--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -2,23 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<style type='text/css'>
-		a {
-			color: #999999;
-		}
-		#table1 tbody td:nth-child(2) a {
-			color: black;
-		}
-		#table1 tbody td a:hover {
-			color: blue;
-		}
-		#table1 {
-			font-size: 12px;
-		}
-		#table1 a {
-			font-size: 12px;
-		}
-		</style>
+		<link rel='stylesheet' type='text/css' href='${virtualPath}public/user/css/my.css?v3' media='screen'>
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
