--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -2,14 +2,26 @@
 	<div class='panel panel-default'>
 		<div class='panel-body'>
 			<div class='owner'>
-				<div>
+				<div class='owner-left'>
 					<div class='face'>
 						<a href='javascript:;'>
 							<img src='${virtualPath}public/assets/images/face/48x48/08_avatar_small.jpg?0'></a>
 					</div>
 				</div>
-				<div>
-					<div class='user_name'>我哪知道</div>
+				<div class='owner-right'>
+					<div class='user_name'>
+						<a href='javascript:;'>我哪知道</a></div>
+					<div class='opt'>
+						<img src='${virtualPath}public/assets/images/share/16x16/men.png'>
+						<a href='javascript:;'>修改资料</a>
+						<a href='javascript:;'>更换头像</a>
+					</div>
+				</div>
+				<div class='clearfix'></div>
+				<div class='owner-bot'>
+					<a href='javascript:;'>关注(0)</a>&nbsp;
+					<a href='javascript:;'>粉丝(0)</a>&nbsp;
+					<a href='javascript:;'>积分(0)</a>
 				</div>
 			</div>
 		</div>
