--- a/blog/views/user/Register.html
+++ b/blog/views/user/Register.html
@@ -95,7 +95,7 @@
         #parse('pagelet/IndexFooter.html')
         #parse('pagelet/IndexJs.html')
 		<!-- Own -->
-		<script type="text/javascript">
+		<script type='text/javascript'>
 			$('#img_VerifyCode').click(function(){
 				showVerifyCode();
 			});
