--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class='owner-right'>
 					<div class='user_name'>
-						<a href='javascript:;'>我哪知道</a></div>
+						<a href='javascript:;'>$_user.Nickname</a></div>
 					<div class='opt'>
 						<img src='${virtualPath}public/assets/images/share/16x16/men.png'>
 						<a href='javascript:;'>修改资料</a>
