--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -39,7 +39,7 @@
 		<div class='panel-body'>
 			<ul class='list-group'>
 				<li class='list-group-item'>
-					<a href='javascript:;'>
+					<a href='admin/new/blog'>
 						<div>发表博文»</div></a>
 				</li>
 				<li class='list-group-item'>
