--- a/blog/views/user/admin/Sidebar.html
+++ b/blog/views/user/admin/Sidebar.html
@@ -6,47 +6,47 @@
 		<div class='panel-body'>
 			<ul class='list-group'>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>站内留言</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>修改个人资料</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>修改登录密码</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>更改头像图片</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>空间个性化设置</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>个人隐私设置</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>群动态设置</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>邮件提醒设置</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>修改登录邮箱</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>绑定外部帐号登录</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>勋章管理</div></a>
 				</li>
 			</ul>
@@ -59,24 +59,24 @@
 		<div class='panel-body'>
 			<ul class='list-group'>
 				<li class='list-group-item active'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>发表博文</div></a>
 				</li>
 				<li class='list-group-item'>
-					<span class='badge'>0</span>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<span class='badge'>3</span>
+					<a href='javascript:;'>
 						<div>草稿箱</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>博客设置/分类管理</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>博客评论管理</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+					<a href='javascript:;'>
 						<div>博客导出</div></a>
 				</li>
 			</ul>
