--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -21,11 +21,11 @@
 							<ol class='breadcrumb'>
 								<li>
 									<div class='glyphicon glyphicon-home'></div>
-									<a href='${virtualPath}index.html'>空间</a></li>
+									<a href='../../'>空间</a></li>
 								<li class='active'>
 									<a href='javascript:;'>博客</a></li>
 								<li class='active'>
-									<a href='javascript:;'>发表博文</a></li>
+									<a href='../new/blog'>发表博文</a></li>
 							</ol>
 							<form id='blogFrm' role='form' onsubmit='return false;' data-url='new-blog'>
 								<div class='form-group'>
