--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -7,6 +7,12 @@
 			border-top-left-radius: 0;
 			border-top-right-radius: 0;
 		}
+		#blogFrm input {
+			font-size: 12px;
+		}
+		#blogFrm textarea {
+			font-size: 12px;
+		}
 		</style>
 	</head>
 	<body>
