--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -43,10 +43,10 @@
 										</a>
 										<ul class='dropdown-menu pull-right dropdown-menu-right' role='menu' aria-labelledby='drop${article._id}'>
 											<li role='presentation'>
-												<a role='menuitem' tabindex='-1' href='javascript:;'>
+												<a role='menuitem' tabindex='-1' href='admin/edit/blog/${article._id}'>
 													<span class='glyphicon glyphicon-edit'></span> 编辑</a></li>
 											<li role='presentation'>
-												<a role='menuitem' tabindex='-1' href='javascript:;'>
+												<a role='menuitem' tabindex='-1' href='admin/del/blog/${article._id}'>
 													<span class='glyphicon glyphicon-remove-sign'></span> 删除</a></li>
 										</ul>
 									</div>
