--- a/blog/views/user/admin/Sidebar.html
+++ b/blog/views/user/admin/Sidebar.html
@@ -59,7 +59,7 @@
 		<div class='panel-body'>
 			<ul class='list-group'>
 				<li class='list-group-item active'>
-					<a href='../new/blog'>
+					<a href='javascript:;'>
 						<div>发表博文</div></a>
 				</li>
 				<li class='list-group-item'>
