--- a/blog/views/user/admin/EditBlog.html
+++ b/blog/views/user/admin/EditBlog.html
@@ -37,7 +37,8 @@
 								<div class='form-group'>
 									<label for='blogFrm_Title'>
 										<b>博客标题</b></label>
-									<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'>
+									<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'
+										value='${article.Title}'>
 								</div>
 								<div class='form-group'>
 									<label for='blogFrm_Abstracts'>
