--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -52,6 +52,11 @@
 									<script id='container' name='Content' type='text/plain'></script>
 								</div>
 								<div class='form-group'>
+									<label for='blogFrm_Tags'>
+										<b>标签</b></label>
+									<input type='text' class='form-control' name='Tags' id='blogFrm_Tags' placeholder='为你的博客设置标签，用逗号隔开，最多5个哦'>
+								</div>
+								<div class='form-group'>
 									<label for='blogFrm_Keys'>
 										<b>关键字</b></label>
 									<input type='text' class='form-control' name='Keys' id='blogFrm_Keys' placeholder='为你的博客设置关键字，用逗号隔开，最多5个哦'>
