--- a/blog/views/user/admin/EditBlog.html
+++ b/blog/views/user/admin/EditBlog.html
@@ -44,7 +44,7 @@
 									<label for='blogFrm_Abstracts'>
 										<b>博客摘要</b></label>
 									<textarea class='form-control' rows='3' name='Abstracts' id='blogFrm_Abstracts'
-										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
+										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'>${article.Abstracts}</textarea>
 								</div>
 								<div class='form-group'>
 									<label for='container'>
@@ -53,9 +53,16 @@
 									<script id='container' name='Content' type='text/plain'></script>
 								</div>
 								<div class='form-group'>
+									<label for='blogFrm_Tags'>
+										<b>标签</b></label>
+									<input type='text' class='form-control' name='Tags' id='blogFrm_Tags' placeholder='为你的博客设置标签，用逗号隔开，最多5个哦'
+										value='${article.Tags}'>
+								</div>
+								<div class='form-group'>
 									<label for='blogFrm_Keys'>
 										<b>关键字</b></label>
-									<input type='text' class='form-control' name='Keys' id='blogFrm_Keys' placeholder='为你的博客设置关键字，用逗号隔开，最多5个哦'>
+									<input type='text' class='form-control' name='Keys' id='blogFrm_Keys' placeholder='为你的博客设置关键字，用逗号隔开，最多5个哦'
+										value='${article.Keys}'>
 								</div>
 								<button type='button' class='btn btn-primary' id='btn_sub'>提交</button>
 								<button type='button' class='btn btn-success'>保存草稿</button>
