--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/user/css/my.css?v3' media='screen'>
+		<link rel='stylesheet' type='text/css' href='${virtualPath}public/user/css/my.css?v3' media='screen' />
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
