--- a/blog/public/user/css/my.less
+++ b/blog/public/user/css/my.less
@@ -35,8 +35,10 @@ body {
 			padding-left: 60px;
 			.user_name {
 				margin-bottom: 2px;
-				padding: 3px;
+				padding: 4px;
 				a {
+					font-weight: bold;
+					font-size: 14px;
 					color: #663300;
 				}
 			}
