--- a/blog/views/pagelet/TopBanner.html
+++ b/blog/views/pagelet/TopBanner.html
@@ -33,7 +33,7 @@
 				<span class='icon-bar'></span>
 				<span class='icon-bar'></span>
 			</button>
-			<a class='navbar-brand' href='http://www.foreworld.net'>$title</a>
+			<a class='navbar-brand' href='http://www.foreworld.net'>FOREWORLD 洪荒</a>
 		</div>
 		<div id='navbar-collapse' class='collapse navbar-collapse'>
 			<ul class='nav navbar-nav'>
