--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -5,12 +5,13 @@
 				<div class='owner-left'>
 					<div class='face'>
 						<a href='javascript:;'>
-							<img src='${virtualPath}public/assets/images/face/48x48/08_avatar_small.jpg?0'></a>
+							<img title='$_user.Nickname'
+								src='${virtualPath}public/assets/images/face/48x48/08_avatar_small.jpg?0'></a>
 					</div>
 				</div>
 				<div class='owner-right'>
 					<div class='user_name'>
-						<a href='javascript:;'>$_user.Nickname</a></div>
+						<a title='$_user.sSex' href='javascript:;'>$_user.Nickname</a></div>
 					<div class='opt'>
 						<img src='${virtualPath}public/assets/images/share/16x16/men.png'>
 						<a href='javascript:;'>修改资料</a>
