--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -13,7 +13,8 @@
 					<div class='user_name'>
 						<a title='$_user.sSex' href='javascript:;'>$_user.Nickname</a></div>
 					<div class='opt'>
-						<img src='${virtualPath}public/assets/images/share/16x16/men.png'>
+						<img title='$_user.sSex'
+							src='${virtualPath}public/assets/images/share/16x16/men.png'>
 						<a href='javascript:;'>修改资料</a>
 						<a href='javascript:;'>更换头像</a>
 					</div>
