--- a/blog/views/user/admin/EditBlog.html
+++ b/blog/views/user/admin/EditBlog.html
@@ -41,10 +41,10 @@
 										value='${article.Title}'>
 								</div>
 								<div class='form-group'>
-									<label for='blogFrm_Abstracts'>
+									<label for='blogFrm_Intro'>
 										<b>博客摘要</b></label>
-									<textarea class='form-control' rows='3' name='Abstracts' id='blogFrm_Abstracts'
-										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'>${article.Abstracts}</textarea>
+									<textarea class='form-control' rows='3' name='Intro' id='blogFrm_Intro'
+										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'>${article.Intro}</textarea>
 								</div>
 								<div class='form-group'>
 									<label for='container'>
