--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -40,9 +40,9 @@
 									<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'>
 								</div>
 								<div class='form-group'>
-									<label for='blogFrm_Abstracts'>
+									<label for='blogFrm_Intro'>
 										<b>博客摘要</b></label>
-									<textarea class='form-control' rows='3' name='Abstracts' id='blogFrm_Abstracts'
+									<textarea class='form-control' rows='3' name='Intro' id='blogFrm_Intro'
 										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
 								</div>
 								<div class='form-group'>
