--- a/blog/views/user/admin/EditBlog.html
+++ b/blog/views/user/admin/EditBlog.html
@@ -50,7 +50,7 @@
 									<label for='container'>
 										<b>博客正文</b></label>
 									<!-- 加载编辑器的容器 -->
-									<script id='container' name='Content' type='text/plain'></script>
+									<script id='container' name='Content' type='text/plain'>${article.Content}</script>
 								</div>
 								<div class='form-group'>
 									<label for='blogFrm_Tags'>
@@ -83,7 +83,7 @@
 		<script type='text/javascript'>
 			var ue = UE.getEditor('container', {
 				autoHeightEnabled: false,
-				initialFrameHeight: 200
+				initialFrameHeight: 300
 			});
 		</script>
 		<!-- Own -->
