--- a/blog/views/pagelet/topMarks.html
+++ b/blog/views/pagelet/topMarks.html
@@ -1,13 +1,14 @@
-<section class="slider">
-	<div class="flexslider">
-		<ul class="slides">
-		    <li>
-				<a href="/archive/c8a092e9920e11e3a195b888e3351e26.html"><img src="/userData/foreworld/20140122/110203.jpg" alt="win7 安装 mysql"/></a>
-			</li>
-			<li>
-				<a href="/archive/c8a08e7c920e11e3a195b888e3351e26.html"><img src="/userData/foreworld/20140207/134411.jpg" alt="RCP 添加全局快捷键"/></a>
-			</li>
-			
-		</ul>
-	</div>
+<section class='flexslider'>
+	<ul class='slides'>
+		<li>
+			<a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>
+				<img src='/public/udata/foreworld/20140122/110203.jpg'
+					title='win7 安装 mysql' alt='win7 安装 mysql' /></a>
+		</li>
+		<li>
+			<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html'>
+				<img src='/public/udata/foreworld/20140207/134411.jpg'
+					title='RCP 添加全局快捷键' alt='RCP 添加全局快捷键' /></a>
+		</li>
+	</ul>
 </section>
