--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -10,7 +10,7 @@
 			<div class='row'>
 				<div class='col-sm-12 col-md-8'>
 					#parse('pagelet/TopMessage.html')
-					#parse('pagelet/topMarks.html')
+					#parse('pagelet/html/topMarks.html')
 					<div class='panel panel-default'>
 						<div class='panel-body'>
 							<ol class='breadcrumb'>
