--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -112,6 +112,14 @@ body {
 	clear: both;
 }
 
+.fl {
+	float: left;
+}
+
+.ta {
+	text-align: center;
+}
+
 a {
 	text-decoration: none;
 	&:hover {
