--- a/blog/views/pagelet/articleIntros.top10.html
+++ b/blog/views/pagelet/articleIntros.top10.html
@@ -4,10 +4,10 @@
 			<h3><a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>win7 安装 mysql</a></h3>
 		</div>
 
-		<div class='tag'>
+		<div class='tag ta'>
 			<span class='label label-default'>
 				<span class='glyphicon glyphicon-tag'></span>
-				<a rel='category tag' title='查看 我哪知道 的全部文章' href='/u/foreworld'>我哪知道</a>
+				<a rel='category tag' title='查看 我哪知道 的全部文章' href='/u/foreworld/'>我哪知道</a>
 			</span>
 			<span class='label label-default'>
 				<span class='glyphicon glyphicon-user'></span>
@@ -25,7 +25,7 @@
 		</figure>
 		<div class='well'>伴随着炎炎夏日和世界杯如火如荼 地进行，由佚站互联团队开发的ZanBlog3主题正式发布，非常抱歉这个主题拖延了这么久才发布（我们不会告诉你是因为世界杯的原因），不过相信看过这个主题之后，你们一定会爱上它，让我们看看ZanBlog3究竟带来了怎样的惊喜吧！ 全新设... </div>
 		<div class='footer'>
-			<div class='tag clearfix'>
+			<div class='tag fl clearfix'>
 				<span class='label label-default'>
 					<a rel='tag' title='查看 mysql 标签' href='/archive/tag/mysql/'>mysql</a>
 				</span>
