--- a/blog/public/site/css/index.less
+++ b/blog/public/site/css/index.less
@@ -14,6 +14,22 @@
 			}
 		}
 	}
+	>figure {
+		img {
+			max-width: 100%;
+			height: auto;
+			border: 5px solid #E3E3E3;
+			border-radius: 3px;
+			margin-left: auto;
+			margin-right: auto;
+			transition: all 0.2s ease-in-out 0s;
+
+			&:hover {
+				opacity: 0.8;
+				border: 5px solid #D9534F;
+			}
+		}
+	}
 	.well {
 		font-size: 12px;
 	}
