--- a/blog/public/site/css/index.less
+++ b/blog/public/site/css/index.less
@@ -1,4 +1,31 @@
 .artIntro {
+
+	.date {
+		background-color: #D9534F;
+		border-color: #D43F3A;
+		border-radius: 100px;
+		color: #FFFFFF;
+		height: 70px;
+		left: -30px;
+		padding-top: 10px;
+		top: -30px;
+		width: 70px;
+		position: relative;
+
+		.month {
+			display: block;
+			text-align: center;
+		}
+
+		.day {
+			display: block;
+			text-align: center;
+			font-size: 30px;
+			font-weight: bold;
+			margin-top: -5px;
+		}
+	}
+
 	.title {
 		>h3 {
 			margin: 0 auto;
