--- a/blog/views/pagelet/articleIntros.top10.html
+++ b/blog/views/pagelet/articleIntros.top10.html
@@ -1,5 +1,11 @@
 <div class='panel panel-default'>
 	<div class='panel-body artIntro'>
+
+		<div class='date' title='创建于 2011-07-08 15:50:29'>
+			<span class='month'>07月</span>
+			<span class='day'>08</span>
+		</div>
+
 		<div class='title'>
 			<h3><a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>win7 安装 mysql</a></h3>
 		</div>
