--- a/blog/views/pagelet/articleIntros.top10.html
+++ b/blog/views/pagelet/articleIntros.top10.html
@@ -1,5 +1,6 @@
 <div class='panel panel-default'>
 	<div class='panel-body artIntro'>
+		<div class='glyphicon glyphicon-bookmark'></div>
 
 		<div class='date' title='创建于 2011-07-08 15:50:29'>
 			<span class='month'>07月</span>
