--- a/blog/public/site/css/index.less
+++ b/blog/public/site/css/index.less
@@ -1,4 +1,11 @@
 .artIntro {
+	>.glyphicon-bookmark {
+		color: #D9534F;
+		font-size: 40px;
+		position: relative;
+		right: 5%;
+		top: -10px;
+	}
 
 	.date {
 		background-color: #D9534F;
