--- a/blog/views/pagelet/articleIntros.top10.html
+++ b/blog/views/pagelet/articleIntros.top10.html
@@ -11,7 +11,7 @@
 			<h3><a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>win7 安装 mysql</a></h3>
 		</div>
 
-		<div class='tag ta'>
+		<div class='tag tag-title ta'>
 			<span class='label label-default'>
 				<span class='glyphicon glyphicon-tag'></span>
 				<a rel='category tag' title='查看 我哪知道 的全部文章' href='/u/foreworld/'>我哪知道</a>
