--- a/blog/public/site/css/index.less
+++ b/blog/public/site/css/index.less
@@ -38,7 +38,7 @@
 
 	.title {
 		margin: 20px 0;
-		>h3 {
+		>h2 {
 			margin: 0 auto;
 			text-align: center;
 
@@ -59,6 +59,7 @@
 
 	>.thumbnail {
 		padding: 0;
+		margin-bottom: 10px;
 		img {
 			max-width: 100%;
 			height: auto;
