--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -12,7 +12,7 @@
 				<div class='col-sm-12 col-md-8'>
 					#parse('pagelet/TopMessage.html')
 					#parse('pagelet/html/topMarks.html')
-					#parse('pagelet/articleIntros.top10.html')
+					#parse('pagelet/html/articleIntros.top10.html')
 				</div>
 				<div class='col-sm-12 col-md-4'>
 					#parse('pagelet/html/top10ViewNums.html')
