--- a/blog/views/pagelet/ArticleIntros.vm.html
+++ b/blog/views/pagelet/ArticleIntros.vm.html
@@ -1,54 +1,44 @@
-#foreach($article in $articles)
-<div class="article content-frame clearfix">
-	#if("1" == $article.Bookmark)
-	<div class="glyphicon glyphicon-bookmark olx-glyphicon-bookmark"></div>
-	#end
-	<div class="article-date" title="创建于 $article.sPostTime">
-		<span class="month">$article.PostTime_Month月</span>
-		<span class="day">$article.PostTime_Day</span>
-	</div>
-	<div class="article-content">
-		<div class="content-title">
-			<h3>
-				<a href="${virtualPath}archive/${article.Id}.html">$article.ArticleTitle</a>
-			</h3>
+#foreach($article in $articles)<div class='panel panel-default' style='margin-bottom: 30px'>
+	<div class='panel-body artIntro'>
+		<div class='glyphicon glyphicon-bookmark'></div>
+
+		<div class='date' title='创建于 2011-07-08 15:50:29'>
+			<span class='month'>07月</span>
+			<span class='day'>08</span>
 		</div>
-		<div class="content-tag">
-			<span class="label label-success olx-label">
-				<span class="glyphicon glyphicon-tag"></span>
-				<a rel="category tag" title="查看 $article.ArticleAuthor 中的全部文章" href="${virtualPath}archive/author/${article.ArticleAuthor}">$article.ArticleAuthor</a></span>
-			<span class="label label-success olx-label"><span class="glyphicon glyphicon-user"></span>
-				<a rel="category tag" title="由 洪荒世界 发布" href="javascript:;">洪荒世界</a></span>
-			<span class="label label-success olx-label"><span class="glyphicon glyphicon-eye-open"></span> <a>$article.ViewNumsToFormat人</a>
+
+		<div class='title'>
+			<h2><a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>$article.Title</a></h2>
+		</div>
+
+		<div class='tag tag-title ta'>
+			<span class='label label-default'>
+				<span class='glyphicon glyphicon-tag'></span>
+				<a rel='category tag' title='查看 我哪知道 的全部文章' href='/u/foreworld/'>我哪知道</a>
 			</span>
-			#*<span class="label label-success olx-label"><span class="glyphicon glyphicon-thumbs-up"></span> <a href="#">2,503</a>
+			<span class='label label-default'>
+				<span class='glyphicon glyphicon-user'></span>
+				<a rel='category tag' title='由 洪荒世界 发布' href='javascript:;'>洪荒世界</a>
 			</span>
-			<span class="label label-success olx-label"><span class="glyphicon glyphicon-thumbs-down"></span> <a href="#">2,503</a>
-			</span>*#
+			<span class='label label-default'>
+				<span class='glyphicon glyphicon-eye-open'></span>
+				<a>1,713人</a>
+			</span>
 		</div>
-		<div class="content-article">
-            #if("" != ${article.ArticleImage})
-			<figure class="thumbnail clearfix">
-				<a href="${virtualPath}archive/${article.Id}.html">
-					<img src="${virtualPath}userData/${article.ArticleAuthor}/${article.ArticleImage}" alt="${virtualPath}userData/${article.ArticleAuthor}/${article.ArticleImage}">
-				</a>
-			</figure>
-		    #end
-			<div class="alert olx-alert clearfix">$article.ArticleIntro</div>
-		</div>
-		<div class="content-footer">
-			<div class="footer-tag clearfix">
-				#foreach($articleTag in $article.Tags)
-				<span class="label label-success olx-tag">
-					<a rel="tag" title="查看 $articleTag.TagName 标签" href="${virtualPath}archive/tag/${articleTag.TagName}">$articleTag.TagName</a>
+
+		<figure class='thumbnail clearfix'>
+			<a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>
+				<img src='/public/udata/foreworld/20140122/110203.jpg' alt='/public/udata/foreworld/20140122/110203.jpg'></a>
+		</figure>
+		<div class='well'>伴随着炎炎夏日和世界杯如火如荼 地进行，由佚站互联团队开发的ZanBlog3主题正式发布，非常抱歉这个主题拖延了这么久才发布（我们不会告诉你是因为世界杯的原因），不过相信看过这个主题之后，你们一定会爱上它，让我们看看ZanBlog3究竟带来了怎样的惊喜吧！ 全新设... </div>
+		<div class='footer'>
+			<div class='tag fl clearfix'>
+				<span class='label label-default'>
+					<a rel='tag' title='查看 mysql 标签' href='/archive/tag/mysql/'>mysql</a>
 				</span>
-				#end
 			</div>
-			<a class="btn btn-danger pull-right" title="详细阅读 $article.ArticleTitle" href="${virtualPath}archive/${article.Id}.html">
-				阅读全文
-				<span class="badge">$article.ViewNumsToFormat</span>
-			</a>
+			<a class='btn btn-danger pull-right' href='/archive/c8a092e9920e11e3a195b888e3351e26.html'
+				title='详细阅读 win7 安装 mysql'>阅读全文 <span class='badge'>1,713</span></a>
 		</div>
-	</div>						
-</div>						
-#end
+	</div>
+</div>#end
