--- a/blog/public/site/css/index.less
+++ b/blog/public/site/css/index.less
@@ -85,12 +85,17 @@
 		font-size: 12px;
 		line-height: 31px;
 
-		span {
+		>span {
 			background-color: #3D4450;
 			margin-right: 5px;
 
 			a {
 				color: #FFFFFF
+			}
+
+			&:hover {
+				background-color: #d9534f;
+				transition: all 0.25s ease-in-out 0s;
 			}
 		}
 	}
