--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -18,9 +18,9 @@
 									<a href='${virtualPath}index.html'>首页</a></li>
 								<li class='active'>标签</li>
 							</ol>
-							<div id='tagList'>
+							<div id='tags'>
 								<div class='panel-group olx-accordion'>
-									#parse('pagelet/html/tagList.html')
+									#parse('pagelet/html/tags.html')
 								</div>
 							</div>
 							<div>
