--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -26,7 +26,7 @@ body {
 		display: none;
 	}
 
-	#archiveList, #tagList {
+	#archiveList, #tags {
 		margin-bottom: 10px;
 		a {
 			color: #B94A48;
