--- a/blog/views/pagelet/TopMarks.vm.html
+++ b/blog/views/pagelet/TopMarks.vm.html
@@ -1,6 +1,6 @@
 <section class='flexslider'>
 	<ul class='slides'>
-		#foreach($article in $topMarks)<li>
+		#foreach($article in $articles)<li>
 			<a href='${virtualPath}archive/${article._id}.html'>
 				<img src='${virtualPath}public/udata/foreworld/${article.Photo}'
 					title='${article.Title}' alt='${article.Title}' /></a>
