--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -18,7 +18,7 @@
 									<a href='${virtualPath}index.html'>首页</a></li>
 								<li class='active'>档案馆</li>
 							</ol>
-							#parse('pagelet/html/archiveList.html')
+							#parse('pagelet/html/archives.html')
 							<div>
 								<a href='javascript:;'>
 									<img src='${virtualPath}public/assets/images/share/16x16/twitter.png'></a>
