--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('pagelet/html/top10ViewNums.html')
+					#parse('pagelet/html/side.art.view.top10.html')
 					#parse('pagelet/html/top10Comments.html')
 					#parse('pagelet/html/usefulLinks.html')
 					<div id='qrCode'>
