--- a/blog/views/pagelet/Side.Art.View.vm.html
+++ b/blog/views/pagelet/Side.Art.View.vm.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class='panel-body'>
 		<ul class='list-group'>
-			#foreach($article in $top10ViewNums)<li class='list-group-item'>
+			#foreach($article in $articles)<li class='list-group-item'>
 				<span class='badge'>$article.ViewCount2Money</span>
 				<a href='${virtualPath}archive/${article._id}.html' title='创建于 $article.sPostTime'>
 					<div>$article.Title</div>
