--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -15,7 +15,7 @@
 					#parse('pagelet/html/hp.artIntro.top10.html')
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('pagelet/html/top10ViewNums.html')
+					#parse('pagelet/html/side.art.view.top10.html')
 					#parse('pagelet/html/top10Comments.html')
 					#parse('pagelet/html/usefulLinks.html')
 					<div id='qrCode'>
