--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class='col-sm-12 col-md-4'>
 					#parse('pagelet/html/side.art.view.top10.html')
-					#parse('pagelet/html/top10Comments.html')
+					#parse('pagelet/html/side.comment.top10.html')
 					#parse('pagelet/html/usefulLinks.html')
 					<div id='qrCode'>
 						<figure>
