--- a/blog/views/pagelet/ArticleIntros.vm.html
+++ b/blog/views/pagelet/ArticleIntros.vm.html
@@ -13,11 +13,11 @@
 
 		<div class='tag tag-title ta'>
 			<span class='label label-default'>
-				<span class='glyphicon glyphicon-tag'></span>
+				<span class='glyphicon glyphicon-user'></span>
 				<a rel='category tag' title='查看 我哪知道 的全部文章' href='/u/foreworld/'>我哪知道</a>
 			</span>
 			<span class='label label-default'>
-				<span class='glyphicon glyphicon-user'></span>
+				<span class='glyphicon glyphicon-home'></span>
 				<a rel='category tag' title='由 洪荒世界 发布' href='javascript:;'>洪荒世界</a>
 			</span>
 			<span class='label label-default'>
@@ -34,6 +34,7 @@
 		<div class='footer'>
 			<div class='tag fl clearfix'>
 				<span class='label label-default'>
+					<span class='glyphicon glyphicon-tag'></span>
 					<a rel='tag' title='查看 mysql 标签' href='/archive/tag/mysql/'>mysql</a>
 				</span>
 			</div>
