--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -3,6 +3,7 @@
 	<head>
 		#parse('pagelet/IndexHeader.html')
 		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/index.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/artintro.css?v3' media='screen' />
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
