--- a/blog/views/pagelet/ArticleIntros.vm.html
+++ b/blog/views/pagelet/ArticleIntros.vm.html
@@ -1,16 +1,13 @@
-#foreach($article in $articles)<div class='panel panel-default' style='margin-bottom: 30px'>
-	<div class='panel-body artIntro'>
+#foreach($article in $articles)<div class='panel panel-default artIntro'>
+	<div class='panel-body'>
 		<div class='glyphicon glyphicon-bookmark'></div>
-
-		<div class='date' title='创建于 2011-07-08 15:50:29'>
+		<div class='date' title='创建于 $article.sPostTime'>
 			<span class='month'>07月</span>
 			<span class='day'>08</span>
 		</div>
-
 		<div class='title'>
 			<h2><a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>$article.Title</a></h2>
 		</div>
-
 		<div class='tag tag-title ta'>
 			<span class='label label-default'>
 				<span class='glyphicon glyphicon-user'></span>
@@ -18,28 +15,31 @@
 			</span>
 			<span class='label label-default'>
 				<span class='glyphicon glyphicon-home'></span>
-				<a rel='category tag' title='由 洪荒世界 发布' href='javascript:;'>洪荒世界</a>
+				<a rel='category tag' title='由 洪荒世界 发布' href='http://www.foreworld.net/'>洪荒世界</a>
 			</span>
 			<span class='label label-default'>
 				<span class='glyphicon glyphicon-eye-open'></span>
-				<a>1,713人</a>
+				<a>$article.ViewCount2Money人</a>
 			</span>
 		</div>
-
 		<figure class='thumbnail clearfix'>
 			<a href='/archive/c8a092e9920e11e3a195b888e3351e26.html'>
 				<img src='/public/udata/foreworld/20140122/110203.jpg' alt='/public/udata/foreworld/20140122/110203.jpg'></a>
 		</figure>
-		<div class='well'>伴随着炎炎夏日和世界杯如火如荼 地进行，由佚站互联团队开发的ZanBlog3主题正式发布，非常抱歉这个主题拖延了这么久才发布（我们不会告诉你是因为世界杯的原因），不过相信看过这个主题之后，你们一定会爱上它，让我们看看ZanBlog3究竟带来了怎样的惊喜吧！ 全新设... </div>
+		<div class='well'>$article.Intro</div>
 		<div class='footer'>
+			#if(${article.aTags})
 			<div class='tag fl clearfix'>
 				<span class='label label-default'>
 					<span class='glyphicon glyphicon-tag'></span>
-					<a rel='tag' title='查看 mysql 标签' href='/archive/tag/mysql/'>mysql</a>
+					#foreach($tag in $article.aTags)
+					<a rel='tag' title='查看 $tag.TagName 标签' href='${virtualPath}archive/tag/$tag.TagName/'>$tag.TagName</a>
+					#end
 				</span>
 			</div>
+			#end
 			<a class='btn btn-danger pull-right' href='/archive/c8a092e9920e11e3a195b888e3351e26.html'
-				title='详细阅读 win7 安装 mysql'>阅读全文 <span class='badge'>1,713</span></a>
+				title='详细阅读 $article.Title'>阅读全文 <span class='badge'>$article.ViewCount2Money</span></a>
 		</div>
 	</div>
 </div>#end
