--- a/blog/views/pagelet/IndexHeader.html
+++ b/blog/views/pagelet/IndexHeader.html
@@ -8,7 +8,7 @@
 <meta name='generator' content='Foreworld' />
 <meta http-equiv='content-type' content='text/html;charset=utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-<link rel='shortcut icon' href='../../docs-assets/ico/favicon.png' />
+<link rel='shortcut icon' href='${virtualPath}public/assets/images/favicon.png?v1' />
 <!--[if lte IE 9]>
 <link rel='stylesheet' type='text/css' href='${cdn}bsie/0.0.0/css/bootstrap-ie6.css' />
 <link rel='stylesheet' type='text/css' href='${cdn}bsie/0.0.0/css/ie.css' />
