--- a/blog/views/pagelet/Tags.vm.html
+++ b/blog/views/pagelet/Tags.vm.html
@@ -1,3 +1,7 @@
+#macro(pdate $num)#if(10 > $num)0$num#else$num#end#end
+#macro(toDay $time)#pdate($time.getDate())#end
+#macro(toMon $time)#set($num = $time.getMonth()+1)#pdate($num)#end
+#macro(toSDate $time)$time.getFullYear()-#toMon($time)-#toDay($time)#end
 #foreach($tag in $tags)<div class='panel panel-default'>
 	<div class='panel-heading'>
 		<h4 class='panel-title'>
@@ -7,7 +11,7 @@
 	<div id='collapse${tag.TagName}' class='panel-collapse collapse in'>
 		<div class='panel-body'>
 			#foreach($article in $tag.Articles)<p>
-				${article.sPostTimeShort}:
+				#toSDate(${article.PostTime}):
 				<a title='创建于 $article.sPostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
 				<span class='badge'>${article.ViewCount2Money}</span>
 			</p>#end
