--- a/blog/views/pagelet/ArticleIntros.vm.html
+++ b/blog/views/pagelet/ArticleIntros.vm.html
@@ -1,9 +1,12 @@
+#macro(pdate $num)#if(10 > $num)0$num#else$num#end#end
+#macro(toDay $time)#pdate($time.getDate())#end
+#macro(toMon $time)#set($num = $time.getMonth()+1)#pdate($num)#end
 #foreach($article in $articles)<div class='panel panel-default artIntro'>
 	<div class='panel-body'>
 		#if(1 == $article.Bookmark)<div class='glyphicon glyphicon-bookmark'></div>#end
 		<div class='date' title='创建于 $article.sPostTime'>
-			<span class='month'>07月</span>
-			<span class='day'>08</span>
+			<span class='month'>#toMon($article.PostTime)月</span>
+			<span class='day'>#toDay($article.PostTime)</span>
 		</div>
 		<div class='title'>
 			<h2><a href='${virtualPath}archive/${article._id}.html'>$article.Title</a></h2>
