--- a/blog/views/pagelet/Archives.vm.html
+++ b/blog/views/pagelet/Archives.vm.html
@@ -1,3 +1,5 @@
+#macro(pdate $num)#if(10 > $num)0$num#else$num#end#end
+#macro(toDay $time)#pdate($time.getDate())#end
 <div id='archives'>
 	#foreach($archive in $archives)<h3>${archive.Y4}年<a id='${archive.Y4}'></a></h3>
 	<div class='panel-group'>
@@ -10,7 +12,7 @@
 			<div id='collapse${archive.Y4}${archiveChild.M2}' class='panel-collapse collapse in'>
 				<div class='panel-body'>
 					#foreach($article in $archiveChild.Articles)<p>
-						${article.PostTime2Day}日:
+						#toDay(${article.PostTime})日:
 						<a title='创建于 $article.sPostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
 						<span class='badge'>${article.ViewCount2Money}</span>
 					</p>#end
