--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -24,6 +24,7 @@
 							<img src='${virtualPath}public/assets/images/foreworld.png' alt='二维码' title='洪荒世界'></figure>
 					</div>
 				</div>
+				#parse('pagelet/LoadMore.html')
 			</div>
 		</section>
 		#parse('pagelet/IndexFooter.html')
