--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -4,6 +4,7 @@
 		#parse('pagelet/IndexHeader.html')
 		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/index.css?v3' media='screen' />
 		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/artintro.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/loadmore.css?v3' media='screen' />
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
