--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -10,7 +10,7 @@
 			<div class='row'>
 				<div class='col-sm-12 col-md-8'>
 					#parse('pagelet/TopMessage.html')
-					<div class='panel panel-default'>
+					<div class='panel panel-default' style='box-shadow: 0 0 5px #c2c2c2;'>
 						<div class='panel-body'>
 							<ol class='breadcrumb'>
 								<li>
