--- a/blog/views/pagelet/TopMessage.html
+++ b/blog/views/pagelet/TopMessage.html
@@ -18,5 +18,5 @@
 </style>
 <div id='topMessage' class='well fade in'>
 	<button class='close' data-dismiss='alert' type='button'>×</button>
-	<strong>[置顶]</strong> $topMessage
+	<strong>[<span style='color:#d43f3a'>置顶</span>]</strong> $topMessage
 </div>
