--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -20,7 +20,7 @@
 							</ol>
 							<div id='tags'>
 								<div class='panel-group olx-accordion'>
-									#parse('pagelet/html/tags.html')
+									#include('pagelet/html/tags.html')
 								</div>
 							</div>
 							<div>
@@ -37,9 +37,9 @@
 					</div>
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('pagelet/html/side.art.view.top10.html')
-					#parse('pagelet/html/side.comment.top10.html')
-					#parse('pagelet/html/usefulLinks.html')
+					#include('pagelet/html/side.art.view.top10.html')
+					#include('pagelet/html/side.comment.top10.html')
+					#include('pagelet/html/usefulLinks.html')
 					<div id='qrCode'>
 						<figure>
 							<img src='${virtualPath}public/assets/images/archive.png' alt='二维码' title='标签'>
