--- a/blog/views/pagelet/LoadMore.html
+++ b/blog/views/pagelet/LoadMore.html
@@ -1,5 +1,5 @@
 <div class='col-sm-12 col-md-8'>
-	<a id='loadMore' href='javascript:loadMore()' data-current-page='1' class='btn btn-block' data-url='${virtualPath}index/more'>加载更多...</a>
+	<a id='loadMore' href='javascript:loadMore()' data-current-page='1' class='btn btn-block' data-url='${virtualPath}${loadMore}/more'>加载更多...</a>
 </div>
 <script type='text/javascript'>
 function loadMore(){
