--- a/blog/views/Index.html
+++ b/blog/views/Index.html
@@ -20,10 +20,7 @@
 					#include('pagelet/html/side.art.view.top10.html')
 					#include('pagelet/html/side.comment.top10.html')
 					#include('pagelet/html/usefulLinks.html')
-					<div id='qrCode'>
-						<figure>
-							<img src='${virtualPath}public/assets/images/foreworld.png' alt='二维码' title='洪荒世界'></figure>
-					</div>
+					#parse('pagelet/qrCode.html')
 				</div>
 				#parse('pagelet/LoadMore.html')
 			</div>
