--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -40,11 +40,7 @@
 					#include('pagelet/html/side.art.view.top10.html')
 					#include('pagelet/html/side.comment.top10.html')
 					#include('pagelet/html/usefulLinks.html')
-					<div id='qrCode'>
-						<figure>
-							<img src='${virtualPath}public/assets/images/archive.png' alt='二维码' title='标签'>
-						</figure>
-					</div>
+					#parse('pagelet/qrCode.html')
 				</div>
 			</div>
 		</section>
